--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,7 +15,12 @@ jobs:
         with:
           python-version: "3.10"
       - run: pip install -r ./scripts/requirements.txt
-      - run: python ./scripts/updater.py
+
+      - name: fetch Submissions
+        run: python ./scripts/updater.py
+        env:
+          CF_USERNAME: ${{ secrets.CF_USERNAME }}
+          CF_PASSWORD: ${{ github.CF_PASSWORD }}
 
       - name: check diff
         id: diff
