--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -16,11 +16,11 @@ jobs:
           python-version: "3.10"
       - run: pip install -r ./scripts/requirements.txt
 
-      - name: fetch Submissions
-        run: python ./scripts/updater.py
+      - name: fetch submissions
         env:
           CF_USERNAME: ${{ secrets.CF_USERNAME }}
           CF_PASSWORD: ${{ secrets.CF_PASSWORD }}
+        run: python ./scripts/updater.py
 
       - name: check diff
         id: diff
