feat: try new action

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,6 +25,7 @@ jobs:
       - name: check diff
         id: diff
         run: echo "::set-output name=DIFF::$(git diff ./src/data/submissions.json)"
+        run: echo "DIFF=\"$(git diff ./src/data/submissions.json)\"" >> $GITHUB_ENV
 
       - name: commit files
         run: |
@@ -32,11 +33,11 @@ jobs:
           git config --local user.name "update submissions"
           git add ./src/data/submissions.json
           git commit -m "feat: update submissions" -a
-        if: steps.diff.outputs.DIFF
+        if: env.DIFF
 
       - name: push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
-        if: steps.diff.outputs.DIFF
+        if: env.DIFF
