chore: rollback actions

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: check diff
         id: diff
-        run: echo "DIFF=\"$(git diff ./src/data/submissions.json)\"" >> $GITHUB_ENV
+        run: echo "::set-output name=DIFF::$(git diff ./src/data/submissions.json)"
 
       - name: commit files
         run: |
@@ -32,11 +32,11 @@ jobs:
           git config --local user.name "update submissions"
           git add ./src/data/submissions.json
           git commit -m "feat: update submissions" -a
-        if: env.DIFF
+        if: steps.diff.outputs.DIFF
 
       - name: push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
-        if: env.DIFF
+        if: steps.diff.outputs.DIFF
